# arch_check

./: .SRCINFO  .gitignore  Makefile  PKGBUILD  README.md  arch_check.py  outouts_examples.txt  pyproject.toml  update_md5hash.sh
arch_chek.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
