[project]
name = "arch_check"
version = "0.3.0"
description = "One-command Arch Linux health CLI — checks disks (LVM/LUKS/btrfs), kernel, services, SMART, sensors; zero Python deps."
authors = [ { name = "kidpixo" } ]
license = "0BSD"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
arch_check = "arch_check:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
